--- a/app.json
+++ b/app.json
@@ -7,6 +7,9 @@
       "eas": {
         "projectId": "fb4123b6-5929-4ff1-952a-c3b0652aacfe"
       }
-    }
+    },
+    "plugins": [
+      "expo-sqlite"
+    ]
   }
 }
