--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "expo": "~52.0.46",
+    "expo-dev-client": "~5.0.20",
+    "expo-sqlite": "~15.1.4",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.9",
-    "expo-dev-client": "~5.0.20"
+    "react-native": "0.76.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
