--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -30,6 +30,9 @@ dependencyResolutionManagement {
     }
   }
 }
+include ':watermelondb-jsi'
+project(':watermelondb-jsi').projectDir =
+        new File(rootProject.projectDir, '../node_modules/@nozbe/watermelondb/native/android-jsi')
 
 apply from: new File(["node", "--print", "require.resolve('expo/package.json')"].execute(null, rootDir).text.trim(), "../scripts/autolinking.gradle");
 useExpoModules()
